# linux-typewriter-kb

./: .clang-format  CMakeLists.txt  Makefile  Readme.md  extensions
.github/workflows/: cmake.yml
assets/: config.txt
cmake/: Config.cmake
cmake/scripts/: ClangFormat.cmake  GenerateDebControl.cmake  GenerateGExtMetadata.cmake  WavResourcesToSources.cmake
gnome_extension_src/: extension.js  volumeSlider.js
include/keyboard/: kb_button_codes.hpp  kb_event_reader.hpp  kb_linux_fs.hpp
include/os_linux/: os_fs_get_keyboards.hpp  os_open_file.hpp  os_shmem.hpp
include/sound/: snd_sdl_mixer.hpp  snd_wav_sound.hpp
include/typewriter/: config.hpp  typewriter.hpp
include/utils/: utils.hpp
scripts/: generate_control_script.sh  generate_metadata.sh  get_app_dependencies.sh  get_directory_size.sh  get_extension_name.sh  prerm  run_separate.sh
scripts/deb/DEBIAN/: control  prerm
scripts/extension/: extension.js  kb_read  logger.js  metadata.json  tmp.sh  tw_snd  typewriterProcess.js  volumeSlider.js
src/: CMakeLists.txt  kb_reader.cpp  main.cpp  tw_config.cpp  typewriter_sound_player.cpp
src/keyboard/: kb_button_codes.cpp  kb_event_reader.cpp  kb_linux_fs.cpp
src/os_linux/: os_fs_get_keyboards.cpp  os_open_file.cpp  os_shmem.cpp
src/sound/: snd_sdl_mixer.cpp  snd_wav_sound.cpp
src/typewriter/: typewriter.cpp
templates/deb_package/: control.in
templates/gnome_extension/: metadata.json.in
typewriter-kb@zzzheka97.gmail.com/: extension.js  volumeSlider.js
